# ez2note

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  cmd.sh  ez2note.pro  project.json
assets/icon/: 30_icon.xcf  LICENSE
assets/linux/: ez2note.desktop
docs/examples/ez2note_home/: config.json
docs/guide/: configuration.md
src/: app.cpp  app.hpp  config.cpp  config.hpp  constants.hpp  main.cpp  resource.rc
src/gui/windows/: abstractmenu.cpp  abstractmenu.hpp  mainwindow.cpp  mainwindow.h
src/gui/windows/about/: about.cpp  about.hpp  aboutwindow.cpp  aboutwindow.hpp
src/gui/windows/findreplace/: findreplacedialog.cpp  findreplacedialog.hpp
src/gui/windows/main/: mainwindow.cpp  mainwindow.hpp  menubar.cpp  menubar.hpp  screen.cpp  screen.hpp
src/gui/windows/main/buffers/: abstractbuffer.cpp  abstractbuffer.hpp  abstractfilebuffer.cpp  abstractfilebuffer.hpp  filebuffer.cpp  filebuffer.hpp  richfilebuffer.cpp  richfilebuffer.hpp
src/gui/windows/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.hpp
